--- a/index.html
+++ b/index.html
@@ -3,31 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <script src="/env-config.js?oauth"></script>
-    <link
-      rel="icon"
-      href="/favicon.ico"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <meta
-      name="msapplication-TileColor"
-      content="#bd2a33"
-    />
-    <meta
-      name="msapplication-TileImage"
-      content="/ms-icon-144x144.png"
-    />
-    <meta
-      name="theme-color"
-      content="#bd2a33"
-    />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="msapplication-TileColor" content="#bd2a33" />
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
+    <meta name="theme-color" content="#bd2a33" />
     <title>Portal de Servicios de la Universidad de Murcia</title>
-    <meta
-      name="description"
-      content="Portal de Servicios de la Universidad de Murcia"
-    />
+    <meta name="description" content="Portal de Servicios de la Universidad de Murcia" />
     <style>
       noscript {
         margin-top: 5rem;
@@ -36,10 +18,7 @@
       }
     </style>
     <noscript>
-      <link
-        rel="stylesheet"
-        href="<%= BASE_URL %>fa/css/all.min.css"
-      />
+      <link rel="stylesheet" href="/fa/css/all.min.css" />
     </noscript>
   </head>
   <body>
@@ -62,9 +41,6 @@
         }, 1000);
       })();
     </script>
-    <script
-      type="module"
-      src="/src/main.ts"
-    ></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
