Preferencias y Profile sin los sliders

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Portal de Servicios de la Universidad de Murcia</title>
     <meta name="description" content="Portal de Servicios de la Universidad de Murcia" />
     <style>
+      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
       noscript {
         margin-top: 5rem;
         display: block;
